Added Shulker Shell [see- 338 to 340]
just want shulker shell in the shop menu because I really need a lot and don't want to farm them by rading end city I am lazy :p

--- a/GUIShop/shops.yml
+++ b/GUIShop/shops.yml
@@ -334,6 +334,10 @@ FarmingDrops:
     id: MELON
     buy-price: 30.0
     sell-price: 3.0
+  '35':
+    type: SHOP
+    id: SHULKER_SHELL
+    buy-price: 2000.0
 Brewing:
   '0':
     type: SHOP
