--- a/GUIShop/shops.yml
+++ b/GUIShop/shops.yml
@@ -103,7 +103,7 @@ Raiding:
     buy-price: 50.0
   '12':
     type: SHOP
-    id: ACACIA_SIGN
+    id: OAK_SIGN
     buy-price: 1.0
   '13':
     type: SHOP
@@ -348,12 +348,12 @@ FarmingDrops:
   '27':
     type: SHOP
     id: FEATHER
-    buy-price: 100.0
+    buy-price: 80.0
     sell-price: 3.0
   '28':
     type: SHOP
     id: EGG
-    buy-price: 100.0
+    buy-price: 50.0
     sell-price: 3.0
   '29':
     type: SHOP
@@ -413,6 +413,14 @@ FarmingDrops:
     id: PUFFERFISH
     buy-price: 30.0
     sell-price: 1.0
+ '41':
+    type: SHOP
+    id: TWISTING_VINES
+    buy-price: 10.0
+ '42':
+    type: SHOP
+    id: WEEPING_VINES
+    buy-price: 10.0
 Brewing:
   '0':
     type: SHOP
@@ -1003,7 +1011,7 @@ Blocks:
   '93':
     type: SHOP
     id: NETHER_WART_BLOCK
-    buy-price: 90.0
+    buy-price: 30.0
   '94':
     type: SHOP
     id: RED_NETHER_BRICK
@@ -1011,8 +1019,8 @@ Blocks:
     buy-price: 50.0
   '95':
     type: SHOP
-    id: SHROOMLIGHT
-    buy-price: 50.0
+    id: WARPED_WART_BLOCK
+    buy-price: 30.0
   '96':
     type: SHOP
     id: BASALT
@@ -1025,4 +1033,19 @@ Blocks:
     type: SHOP
     id: SOUL_SOIL
     buy-price: 30.0
-    
+  '99':
+    type: SHOP
+    id: WARPED_STEM
+    buy-price: 30.0
+  '100':
+    type: SHOP
+    id: CRIMSON_STEM
+    buy-price: 30.0
+  '101':
+    type: SHOP
+    id: WARPED_NYLIUM
+    buy-price: 30.0
+  '102':
+    type: SHOP
+    id: CRINSOM_NYLIUM
+    buy-price: 30.0
