--- a/GUIShop/shops.yml
+++ b/GUIShop/shops.yml
@@ -36,18 +36,18 @@
 
 
 Raiding:
-#  '0':
-#    type: COMMAND
-#    id: COMPARATOR
-#    buy-price: 200.0
-#    sell-price: 100.0
-#    shop-lore:
-#    - '&aLine 1'
-#    - '&bLine 2'
-#    shop-name: '&4Heal Command Test'
-#    commands:
-#    - heal {PLAYER_NAME}
-#    - broadcast {PLAYER_NAME} purchased {ITEM_SHOP_NAME}&a for {BUY_PRICE}.
+  #  '0':
+  #    type: COMMAND
+  #    id: COMPARATOR
+  #    buy-price: 200.0
+  #    sell-price: 100.0
+  #    shop-lore:
+  #    - '&aLine 1'
+  #    - '&bLine 2'
+  #    shop-name: '&4Heal Command Test'
+  #    commands:
+  #    - heal {PLAYER_NAME}
+  #    - broadcast {PLAYER_NAME} purchased {ITEM_SHOP_NAME}&a for {BUY_PRICE}.
   '0':
     type: SHOP
     id: PISTON
@@ -442,7 +442,7 @@ Brewing:
     buy-price: 25.0
   '4':
     type: SHOP
-    id: GLISTERING_MELON
+    id: GLISTERING_MELON_SLICE
     buy-price: 25.0
   '5':
     type: SHOP
@@ -642,7 +642,7 @@ Blocks:
     buy-price: 40.0
   '3':
     type: SHOP
-    id: ANDERSITE
+    id: ANDESITE
     buy-price: 40.0
   '4':
     type: SHOP
@@ -672,7 +672,8 @@ Blocks:
   '10':
     type: SHOP
     id: GRAVEL
-    buy-price: 30.0
+    buy-price: 20.0
+    sell-price: 1.0
   '11':
     type: SHOP
     id: OAK_LOG
@@ -725,7 +726,7 @@ Blocks:
     buy-price: 300.0
   '22':
     type: SHOP
-    id: SNOW
+    id: SNOW_BLOCK
     buy-price: 30.0
   '23':
     type: SHOP
@@ -745,306 +746,105 @@ Blocks:
     buy-price: 30.0
   '27':
     type: SHOP
-    id: GRAVEL
-    buy-price: 20.0
-    sell-price: 1.0
-  '28':
-    type: SHOP
     id: GLOWSTONE
     buy-price: 40.0
-  '29':
+  '28':
     type: SHOP
     id: GLASS
     buy-price: 30.0
-  '30':
-    type: SHOP
-    id: WHITE_STAINED_GLASS
-    buy-price: 60.0
-  '31':
-    type: SHOP
-    id: ORANGE_STAINED_GLASS
-    buy-price: 60.0
-  '32':
-    type: SHOP
-    id: MEGENTA_STAINED_GLASS
-    buy-price: 60.0
-  '33':
-    type: SHOP
-    id: LIGHT_BLUE_STAINED_GLASS
-    buy-price: 60.0
-  '34':
-    type: SHOP
-    id: YELLOW_STAINED_GLASS
-    buy-price: 60.0
-  '35':
-    type: SHOP
-    id: LIME_STAINED_GLASS
-    buy-price: 60.0
-  '36':
-    type: SHOP
-    id: PINK_STAINED_GLASS
-    buy-price: 60.0
-  '37':
-    type: SHOP
-    id: GRAY_STAINED_GLASS
-    buy-price: 60.0
-  '38':
-    type: SHOP
-    id: LIGHT_GRAY_STAINED_GLASS
-    buy-price: 60.0
-  '39':
-    type: SHOP
-    id: CYAN_STAINED_GLASS
-    buy-price: 60.0
-  '40':
-    type: SHOP
-    id: PURPLE_STAINED_GLASS
-    buy-price: 60.0
-  '41':
-    type: SHOP
-    id: BLUE_STAINED_GLASS
-    buy-price: 60.0
-  '42':
-    type: SHOP
-    id: BROWN_STAINED_GLASS
-    buy-price: 60.00
-  '43':
-    type: SHOP
-    id: GREEN_STAINED_GLASS
-    buy-price: 60.0
-  '44':
-    type: SHOP
-    id: RED_STAINED_GLASS
-    buy-price: 60.0
-  '45':
-    type: SHOP
-    id: BLACK_STAINED_GLASS
-    buy-price: 60.0
-  '46':
-    type: SHOP
-    id: WHITE_WOOL
-    buy-price: 30.0
-  '47':
-    type: SHOP
-    id: ORANGE_WOOL
-    buy-price: 60.0
-  '48':
-    type: SHOP
-    id: MEGENTA_WOOL
-    buy-price: 60.0
-  '49':
-    type: SHOP
-    id: LIGHT_BLUE_WOOL
-    buy-price: 60.0
-  '50':
-    type: SHOP
-    id: YELLOW_WOOL
-    buy-price: 60.0
-  '51':
-    type: SHOP
-    id: LIME_WOOL
-    buy-price: 60.0
-  '52':
-    type: SHOP
-    id: PINK_WOOL
-    buy-price: 60.0
-  '53':
-    type: SHOP
-    id: GREY_WOOL
-    buy-price: 60.0
-  '54':
-    type: SHOP
-    id: LIGHT_GREY_WOOL
-    buy-price: 60.0
-  '55':
-    type: SHOP
-    id: CYAN_WOOL
-    buy-price: 60.0
-  '56':
-    type: SHOP
-    id: PURPLE_WOOL
-    buy-price: 60.0
-  '57':
-    type: SHOP
-    id: BLUE_WOOL
-    buy-price: 60.0
-  '58':
-    type: SHOP
-    id: BROWN_WOOL
-    buy-price: 60.0
-  '59':
-    type: SHOP
-    id: GREEN_WOOL
-    buy-price: 60.0
-  '60':
-    type: SHOP
-    id: RED_WOOL
-    buy-price: 60.0
-  '61':
-    type: SHOP
-    id: BLACK_WOOL
-    buy-price: 60.0
-  '62':
+  '29':
     type: SHOP
     id: MYCELIUM
     buy-price: 100.0
-  '63':
+  '30':
     type: SHOP
-    id: NETHER_BRICK
+    id: NETHER_BRICKS
     buy-price: 40.0
-  '64':
+  '31':
     type: SHOP
-    id: ENCHANTMENT_TABLE
+    id: ENCHANTING_TABLE
     buy-price: 100.0
-  '65':
+  '32':
     type: SHOP
     id: CAULDRON
     buy-price: 105.0
-  '66':
+  '33':
     type: SHOP
     id: END_STONE
     buy-price: 40.0
-  '67':
+  '34':
     type: SHOP
     id: BEACON
     buy-price: 100000.0
-  '68':
+  '35':
     type: SHOP
-    id: WHITE_TERRACOTTA
-    buy-price: 40.0
-  '69':
-    type: SHOP
-    id: ORANGE_TERRACOTTA
-    buy-price: 40.0
-  '70':
-    type: SHOP
-    id: MAGENTA_TERRACOTTA
-    buy-price: 40.0
-  '71':
-    type: SHOP
-    id: LIGHT_BLUE_TERRACOTTA
-    buy-price: 40.0
-  '72':
-    type: SHOP
-    id: YELLOW_TERRACOTTA
-    buy-price: 40.0
-  '73':
-    type: SHOP
-    id: LIME_TERRACOTTA
-    buy-price: 40.0
-  '74':
-    type: SHOP
-    id: PINK_TERRACOTTA
-    buy-price: 40.0
-  '75':
-    type: SHOP
-    id: GRAY_TERRACOTTA
-    buy-price: 40.0
-  '76':
-    type: SHOP
-    id: LIGHT_GRAY_TERRACOTTA
-    buy-price: 40.0
-  '77':
-    type: SHOP
-    id: CYAN_TERRACOTTA
-    buy-price: 40.0
-  '78':
-    type: SHOP
-    id: PURPLE_TERRACOTTA
-    buy-price: 40.0
-  '79':
-    type: SHOP
-    id: BLUE_TERRACOTTA
-    buy-price: 40.0
-  '80':
-    type: SHOP
-    id: BROEN_TERRACOTTA
-    buy-price: 40.0
-  '81':
-    type: SHOP
-    id: GREEN_TERRACOTTA
-    buy-price: 40.0
-  '82':
-    type: SHOP
-    id: RED_TERRACOTTA
-    buy-price: 40.0
-  '83':
-    type: SHOP
-    id: BLACK_TERRACOTTA
-    buy-price: 40.0
-  '84':
-    type: SHOP
-    id: PRISMARIN
+    id: PRISMARINE
     buy-price: 100.0
-  '85':
+  '36':
     type: SHOP
-    id: DARK_PRISMARINN
+    id: DARK_PRISMARINE
     buy-price: 100.0
-  '86':
+  '37':
     type: SHOP
     id: SEA_LANTERN
     buy-price: 100.0
-  '87':
+  '38':
     type: SHOP
     id: PACKED_ICE
     buy-price: 50.0
-  '88':
+  '39':
     type: SHOP
     id: RED_SANDSTONE
     buy-price: 40.0
-  '89':
+  '40':
     type: SHOP
     id: END_ROD
     buy-price: 80.0
-  '90':
+  '41':
     type: SHOP
     id: PURPUR_BLOCK
     buy-price: 80.0
-  '91':
-    type: SHOP
-    id: END_STONE
-    buy-price: 80.0
-  '92':
+  '42':
     type: SHOP
     id: MAGMA_BLOCK
     buy-price: 90.0
-  '93':
+  '43':
     type: SHOP
     id: NETHER_WART_BLOCK
     buy-price: 30.0
-  '94':
+  '44':
     type: SHOP
-    id: RED_NETHER_BRICK
+    id: RED_NETHER_BRICKS
     buy-price: 50.0
-  '95':
+  '45':
     type: SHOP
     id: WARPED_WART_BLOCK
     buy-price: 30.0
-  '96':
+  '46':
     type: SHOP
     id: BASALT
     buy-price: 50.0
-  '97':
+  '47':
     type: SHOP
     id: BLACKSTONE
     buy-price: 100.0
-  '98':
+  '48':
     type: SHOP
     id: SOUL_SOIL
     buy-price: 30.0
-  '99':
+  '49':
     type: SHOP
     id: WARPED_STEM
     buy-price: 30.0
-  '100':
+  '50':
     type: SHOP
     id: CRIMSON_STEM
     buy-price: 30.0
-  '101':
+  '51':
     type: SHOP
     id: WARPED_NYLIUM
     buy-price: 30.0
-  '102':
+  '52':
     type: SHOP
-    id: CRINSOM_NYLIUM
+    id: CRIMSON_NYLIUM
     buy-price: 30.0
