--- a/GUIShop/config.yml
+++ b/GUIShop/config.yml
@@ -23,11 +23,24 @@ prefix: '[&cGUIShop&f]'
 
 ## Command used to open shop, DON'T PUT A /
 buy-commands:
-    - 'shop'
+  - 'buy'
+  - 'shop'
 
 ## Command to open sell inventory, DON'T PUT A /
 sell-commands:
-    - 'sellshop'
+  - 'sell'
+
+## Command registration options
+##
+## If 'INTERCEPT', the commands will be intercepted and executed.
+##     Will not conflict with other plugins' commands, but does not support tab completion.
+##
+## If 'REGISTER', the commands will be registered with the server and will be formally recognised.
+##     Tab completion supported. Possibility of conflicts with plugins with the same commands.
+##
+## If 'NONE', neither of the above will happen. Intended for users who wish to use the commands.yml.
+##     Of course, the /guishopuser commands will still work.
+commands-mode: 'REGISTER'
 
 ############ Language settings ###############
 
@@ -39,6 +52,9 @@ disabled-world: '&cYou cannot use the shop from this world!'
 
 #Use the escape key to close the shop instead of the back button.
 escape-only: true
+
+#Rightclick an item in the shop to open an alternate sell GUI
+alternate-sell-enable: false
 
 #The message for the amount you lose, E.G Cost, Or Price
 cost: '&7Price'
@@ -117,7 +133,7 @@ signs-only: false
 signs-only-message: '&cYou can only access the shop by clicking a [&cGUIShop&f] sign!'
 
 #Menu row count
-menu-rows: 3
+menu-rows: 4
 
 #Enable sound on purchase
 enable-sound: true
@@ -128,11 +144,26 @@ purchase-sound: 'ENTITY_PLAYER_LEVELUP'
 #Enable in-game creator.
 ingame-config: true
 
+#Enable dynamic pricing
+dynamic-pricing: false
+
 #Enable DEBUG mode
 debug-mode: false
 
+#The overall shop menu title
+menu-title: "&9EKR &6SHOP"
+
+#The title of a specific shop inventory
+shop-title: "&9EKR &6SHOP &f> &r{shopname}"
+
+#The title of the sell inventory
+sell-title: "&9EKR &6SHOP &f> &rSell"
+
 #The title of the quantity inventory.
 qty-title: "&4Select Amount"
+
+#The title of the alternate sell GUI, if enabled
+alt-sell-title: "Menu &f> &rSell"
 
 access-to: "&aAccess to Commands:"
 
@@ -146,8 +177,30 @@ cannot-buy: "&cCannot Purchase"
 
 cannot-sell: "&cCannot Sell"
 
+forward-page-button-name: "&rNext page"
+
+backward-page-button-name: "&rLast page"
+
+#Used in the alternate sell GUI
+alt-sell-indicator-material: 'GOLD_INGOT'
+
+alt-sell-add-material: 'GREEN_STAINED_GLASS_PANE'
+alt-sell-remove-material: 'RED_STAINED_GLASS_PANE'
+
+alt-sell-quantity-1: 1
+alt-sell-quantity-2: 10
+alt-sell-quantity-3: 64
+
+alt-sell-confirm-material: 'EMERALD_BLOCK'
+alt-sell-cancel-material: 'REDSTONE_BLOCK'
+
+alt-sell-confirm-name: '&a&lConfirm'
+alt-sell-cancel-name: '&c&lCancel'
+
+alt-sell-not-enough: '&cYou do not have {amount} such items to sell.'
+
 DisabledWorlds:
-    -'Test'
+  -'Test'
 
 ## Items to disable quantity stacking.
 ## This will force these items to only have
@@ -157,138 +210,171 @@ DisabledWorlds:
 ## E.G CHESTPLATE blocks ALL chestplates because all items contain
 ## the word CHESTPLATE.
 disabled-qty-items:
-    - "CHESTPLATE"
-    - "LEGGINGS"
-    - "BOOTS"
-    - "HELMET"
-    - "BOW"
-    - "FISHING_ROD"
-    - "SHEARS"
-    - "NAME_TAG"
-    - "SWORD"
-    - "AXE"
-    - "PICKAXE"
-    - "SHOVEL"
-    - "SPADE"
-    - "HOE"
-    - "LEAD"
-    - "LEASH"
-    - "HORSE_ARMOR"
-    - "SADDLE"
-    - "BARDING"
+  - "CHESTPLATE"
+  - "LEGGINGS"
+  - "BOOTS"
+  - "HELMET"
+  - "BOW"
+  - "FISHING_ROD"
+  - "SHEARS"
+  - "NAME_TAG"
+  - "SWORD"
+  - "AXE"
+  - "PICKAXE"
+  - "SHOVEL"
+  - "SPADE"
+  - "HOE"
+  - "LEAD"
+  - "LEASH"
+  - "HORSE_ARMOR"
+  - "SADDLE"
+  - "BARDING"
 
 ##Menu Items
-Rows: 3
+Rows: 4
 
 menu-items:
   Pane0:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane1:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane2:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane3:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane4:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane5:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane6:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane7:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   PaneCornerRight:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane8:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
-  Raiding:
+    Item: 'LIME_STAINED_GLASS_PANE'
+  Redstone:
     Type: 'SHOP'
     Enabled: true
-    Item: 'TNT'
-    Desc: '&8(&cBlow them up!&8)'
-    Name: '&4Raiding'
-  Ores:
-    Type: 'SHOP'
-    Enabled: true
-    Item: 'EMERALD'
-    Desc: '&8(&fOres&8)'
-    Name: '&aOres'
-  FarmingDrops:
-    Type: 'SHOP'
-    Enabled: true
-    Item: 'WHEAT_SEEDS'
-    Desc: '&8(&fFarming&8)'
-    Name: '&eFarming/Drops'
+    Item: 'REDSTONE'
+    Desc: ''
+    Name: '&fRedstone'
   Brewing:
     Type: 'SHOP'
     Enabled: true
-    Item: 'EXPERIENCE_BOTTLE'
-    Desc: '&8(&fBrewing&8)'
-    Name: '&2Brewing'
+    Item: 'BREWING_STAND'
+    Desc: ''
+    Name: '&fBrewing'
+  Pane9:
+    Type: 'DUMMY'
+    Item: 'LIGHT_GRAY_STAINED_GLASS_PANE'
+  Food:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'APPLE'
+    Desc: ''
+    Name: '&fFood'
+  Pane10:
+    Type: 'DUMMY'
+    Item: 'LIGHT_GRAY_STAINED_GLASS_PANE'
+  Transportation:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'MINECART'
+    Desc: ''
+    Name: '&fTransportation'
+  Precious:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'DIAMOND'
+    Desc: ''
+    Name: '&fPrecious'
+  Pane11:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  Pane12:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  MobDrops:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'GUNPOWDER'
+    Desc: ''
+    Name: '&fMob drops'
   Gear:
     Type: 'SHOP'
     Enabled: true
-    Item: 'DIAMOND_HELMET'
-    Desc: '&8(&fGear&8)'
-    Name: '&bGear'
-  Spawners:
-    Type: 'SHOP'
-    Enabled: false
-    Item: 'SPAWNER'
-    Desc: '&8(&fSpawners&8)'
-    Name: '&6Spawners'
-  Blocks:
-    Type: 'SHOP'
-    Enabled: true
-    Item: 'STONE'
-    Desc: '&8(&fBlocks&8)'
-    Name: '&6Blocks'
-  Pane9:
-    Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
-  PaneCornerBottomLeft:
-    Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
-  Pane11:
-    Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
-  Pane12:
-    Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'NETHERITE_SWORD'
+    Desc: ''
+    Name: '&fGear'
   Pane13:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIGHT_GRAY_STAINED_GLASS_PANE'
+  DecorationBlocks:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'WITHER_ROSE'
+    Desc: ''
+    Name: '&fDecorations'
   Pane14:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIGHT_GRAY_STAINED_GLASS_PANE'
+  BuildingBlocks:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'BRICKS'
+    Desc: ''
+    Name: '&fBuilding blocks'
+  Miscellaneous:
+    Type: 'SHOP'
+    Enabled: true
+    Item: 'WHEAT_SEEDS'
+    Desc: ''
+    Name: '&fMiscellaneous'
   Pane15:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  PaneCornerBottomLeft:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane16:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane17:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
   Pane18:
     Type: 'DUMMY'
-    Item: 'RED_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  Pane19:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  Pane20:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  Pane21:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
+  Pane22:
+    Type: 'DUMMY'
+    Item: 'LIME_STAINED_GLASS_PANE'
   PaneCornerBottomRight:
     Type: 'DUMMY'
-    Item: 'BLUE_STAINED_GLASS_PANE'
+    Item: 'LIME_STAINED_GLASS_PANE'
 
- ################################
- ## Developed by pablo67340    ##
- ## If you need any support    ##
- ## https://discord.gg/v7D6pCm ##
- ################################
+  ################################
+  ## Developed by pablo67340    ##
+  ## If you need any support    ##
+  ## https://discord.gg/v7D6pCm ##
+  ################################
